<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.3</version>
	</parent>

	<groupId>com.opencu.bookit</groupId>
	<artifactId>book-it-backend</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>book-it-backend</name>
	<description>Backend service for the BookIt coworking system.</description>

	<modules>
		<module>domain</module>
		<module>application</module>
		<module>bootstrap</module>
		<module>qrcode-adapter</module>
		<module>persistence-adapter</module>
		<module>security-adapter</module>
		<module>web-adapter</module>
		<module>email-notification-adapter</module>
		<module>notification-queue-adapter</module>
        <module>ai-agent-adapter</module>
		<module>s3-adapter</module>
	</modules>

	<properties>
		<java.version>21</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<lombok.version>1.18.30</lombok.version>
		<mapstruct.version>1.5.5.Final</mapstruct.version>
		<jwt.version>0.11.5</jwt.version>
		<springdoc.version>2.2.0</springdoc.version>
		<zxing.version>3.5.1</zxing.version>
		<logstash.version>7.4</logstash.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.opencu.bookit</groupId>
				<artifactId>domain</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.opencu.bookit</groupId>
				<artifactId>application</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.opencu.bookit</groupId>
				<artifactId>persistence-adapter</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.opencu.bookit</groupId>
				<artifactId>qrcode-adapter</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.opencu.bookit</groupId>
				<artifactId>security-adapter</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.opencu.bookit</groupId>
				<artifactId>web-adapter</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.opencu.bookit</groupId>
				<artifactId>email-notification-adapter</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.opencu.bookit</groupId>
				<artifactId>notification-queue-adapter</artifactId>
				<version>${project.version}</version>
			</dependency>

			<!-- MapStruct -->
			<dependency>
				<groupId>org.mapstruct</groupId>
				<artifactId>mapstruct</artifactId>
				<version>${mapstruct.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mapstruct</groupId>
				<artifactId>mapstruct-processor</artifactId>
				<version>${mapstruct.version}</version>
			</dependency>

			<!-- JWT -->
			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt-api</artifactId>
				<version>${jwt.version}</version>
			</dependency>
			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt-impl</artifactId>
				<version>${jwt.version}</version>
			</dependency>
			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt-jackson</artifactId>
				<version>${jwt.version}</version>
			</dependency>

			<!-- QR Code -->
			<dependency>
				<groupId>com.google.zxing</groupId>
				<artifactId>core</artifactId>
				<version>${zxing.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.zxing</groupId>
				<artifactId>javase</artifactId>
				<version>${zxing.version}</version>
			</dependency>

			<!-- OpenAPI -->
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
				<version>${springdoc.version}</version>
			</dependency>

			<!-- Логирование -->
			<dependency>
				<groupId>net.logstash.logback</groupId>
				<artifactId>logstash-logback-encoder</artifactId>
				<version>${logstash.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<configuration>
						<excludes>
							<exclude>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
							</exclude>
						</excludes>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.flywaydb</groupId>
					<artifactId>flyway-maven-plugin</artifactId>
					<version>11.5.0</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
						<annotationProcessorPaths>
							<path>
								<groupId>org.mapstruct</groupId>
								<artifactId>mapstruct-processor</artifactId>
								<version>${mapstruct.version}</version>
							</path>
							<path>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
								<version>${lombok.version}</version>
							</path>
							<path>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok-mapstruct-binding</artifactId>
								<version>0.2.0</version>
							</path>
						</annotationProcessorPaths>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>